Mobile navbar fixed isssue with going off screen.

--- a/css/main.css
+++ b/css/main.css
@@ -249,6 +249,9 @@ footer .cta-wrapper {
 
 /* SMALL DEVICES (landscape phones, 576px and up) */
 @media (max-width: 576px) {
+  nav {
+    height: inherit;
+  }
   .header-img {
     margin-bottom: 25px;
   }
